add SetUserInactive to shutdown interface

--- a/HISTORY
+++ b/HISTORY
@@ -193,3 +193,7 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2012-07-12: Version 0.0.8
 - fix the dbus main loop
+
+2012-07-24: Version 0.0.8a
+- add SetUserInactive to shutdown interface
+
