--- a/README
+++ b/README
@@ -72,6 +72,10 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
 - call Service method of plugins
   vdr-dbus-send.sh /Plugins/<pluginname> plugin.Service string:'id' string:'data'
 
+- list all loaded plugins
+  vdr-dbus-send.sh /Plugins plugin.List
+  You'll get an array of structs containing two strings, the name and the version of the plugins.
+
 - disable EIT scanner with timeout (default: 3600)
   vdr-dbus-send.sh /EPG epg.DisableScanner int32:3600
 
