--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (0.0.8c-0yavdr0~precise) precise; urgency=medium
+
+  * rebuild
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Wed, 21 Nov 2012 20:49:41 +0100
+
 vdr-plugin-dbus2vdr (0.0.2i-0yavdr8~natty) natty; urgency=medium
 
   * rebuild
