--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (0.0.8d-0yavdr0~precise) precise; urgency=medium
+
+  * new upstream snapshot
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Sun, 25 Nov 2012 10:56:10 +0100
+
 vdr-plugin-dbus2vdr (0.0.8c-0yavdr0~precise) precise; urgency=medium
 
   * rebuild
