--- a/HISTORY
+++ b/HISTORY
@@ -206,3 +206,5 @@ VDR Plugin 'dbus2vdr' Revision History
 2012-11-25: Version 0.0.8d
 - add SwitchChannel to remote interface
 - refactoring of message handling, it's now simpler to add new methods
+- add channel interface
+- add List to channel interface
