--- a/HISTORY
+++ b/HISTORY
@@ -214,3 +214,9 @@ VDR Plugin 'dbus2vdr' Revision History
 - fix return type of setup.Get and setup.List
 - add GetVolume/SetVolume to remote interface
 - return proper DBus errors on unknown messages
+
+2012-12-16: Version 1
+- switch to another version number scheme, after all I do
+  nearly "rolling releases"
+- started network support
+  refactored monitor and dispatcher to work with multiple instances
