--- a/README
+++ b/README
@@ -147,8 +147,15 @@ Interface "recording"
       string   key
       variant  value
 
-  possible keys: Path, Name, Title, Start, Priority, Lifetime,
-  FramesPerSecond, NumFrames, LengthInSeconds, FileSizeMB, IsPesRecording
+  possible keys: Path, Name, Title, Start, Deleted, Priority, Lifetime,
+  HierarchyLevels, FramesPerSecond, NumFrames, LengthInSeconds, FileSizeMB,
+  IsPesRecording, IsNew, IsEdited
+  If an cRecordingInfo object exists there can also be:
+  Info/ChannelID, Info/ChannelName, Info/Title, Info/ShortText, Info/Description,
+  Info/Aux, Info/FramesPerSecond
+  If the info object has components there might be:
+  Info/Component/<nr>/stream, Info/Component/<nr>/type, Info/Component/<nr>/language,
+  Info/Component/<nr>/description
 
 - list recordings
   vdr-dbus-send.sh /Recordings recording.List
