--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (1-0yavdr0~precise) precise; urgency=medium
+
+  * new upstream release
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Thu, 27 Dec 2012 12:42:19 +0100
+
 vdr-plugin-dbus2vdr (0.0.8d-0yavdr0~precise) precise; urgency=medium
 
   * new upstream snapshot
