--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (1-1yavdr0~precise) precise; urgency=medium
+
+  * create /var/lib/vdr/plugins/dbus2vdr with write permissions
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Wed, 02 Jan 2013 21:50:14 +0100
+
 vdr-plugin-dbus2vdr (1-0yavdr0~precise) precise; urgency=medium
 
   * new upstream release
