--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (2-0yavdr0~precise) precise; urgency=medium
+
+  * new upstream release
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Thu, 10 Jan 2013 21:22:56 +0100
+
 vdr-plugin-dbus2vdr (1-1yavdr0~precise) precise; urgency=medium
 
   * create /var/lib/vdr/plugins/dbus2vdr with write permissions
