--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr-plugin-dbus2vdr (5-0yavdr0~precise) precise; urgency=medium
+
+  * new upstream release
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Sat, 09 Mar 2013 16:22:37 +0100
+
 vdr-plugin-dbus2vdr (2-0yavdr0~precise) precise; urgency=medium
 
   * new upstream release
