--- a/debian/install
+++ b/debian/install
@@ -1,12 +1,6 @@
-libvdr-dbus2vdr.so.*    usr/lib/vdr/plugins/
+# default plugin config
 debian/plugin.dbus2vdr.conf    etc/vdr/plugins/
-#debian/tmp/usr/share/locale
-bin/vdr-dbus-send.sh   usr/share/vdr-plugin-dbus2vdr/
-shutdown-wrapper   usr/share/vdr-plugin-dbus2vdr/
-#bin/dbus-client.py usr/share/vdr-plugin-dbus2vdr/
-etc/de.tvdr.vdr.conf etc/dbus-1/system.d/
-etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
 
-etc/network.conf  var/lib/vdr/plugins/dbus2vdr/
-etc/dbus2vdr.conf var/lib/vdr/.init/
+#DBus activation config
+etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
 
