--- a/debian/install
+++ b/debian/install
@@ -2,5 +2,5 @@
 debian/plugin.dbus2vdr.conf    etc/vdr/plugins/
 
 #DBus activation config
-etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
+#etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
 
