--- a/README
+++ b/README
@@ -323,7 +323,8 @@ Interface "vdr"
     string  "Start", "Ready", "Stop" or "Unknown"
 
   Through the lifetime of dbus2vdr there are three signals which are sent
-  via this interface.
+  via this interface. The instance-id of the vdr is sent as the first
+  argument, type is int32.
 
   "Start": is sent when cPlugin::Start is called
   "Ready": is sent when cPlugin::MainThreadHook is called the first time
