--- a/README
+++ b/README
@@ -93,7 +93,7 @@ Interface "epg"
 - enable EIT scanner
   vdr-dbus-send.sh /EPG epg.EnableScanner
 
-- clear EPG data with optional value for inactivity timeout of eit-scanner (default: 10)
+- clear EPG data with a value for inactivity timeout of eit-scanner (default: 10)
   vdr-dbus-send.sh /EPG epg.ClearEPG string:'channel' int32:10
 
 - add EPG entry
@@ -104,10 +104,10 @@ Interface "epg"
 - read EPG data from file
   vdr-dbus-send.sh /EPG epg.PutFile string:'/path/to/epg/data'
 
-- get current or next event of given or all channels
-  vdr-dbus-send.sh /EPG epg.Now [string:'channel']
-  vdr-dbus-send.sh /EPG epg.Next [string:'channel']
-  vdr-dbus-send.sh /EPG epg.At [string:'channel'] uint64:time
+- get current or next event of given or all channels if string is empty
+  vdr-dbus-send.sh /EPG epg.Now string:'channel'
+  vdr-dbus-send.sh /EPG epg.Next string:'channel'
+  vdr-dbus-send.sh /EPG epg.At string:'channel' uint64:time
 
   The events are returned as an array of structs.
   Each struct contains a string as a key and a variant as its value.
