--- a/README
+++ b/README
@@ -50,8 +50,8 @@ Multi Instance Support
 The default destination address is "de.tvdr.vdr". In case of a vdr version above 1.7.4 and an
 instance id (vdr parameter -i) greater than 0, this instance id is appended to this address,
 e.g. "de.tvdr.vdr1". If you use this feature you have to clone the dbus-policy file and change
-the address. Also vdr-dbus-send.sh is not ready for this - use dbus-send or whatever you use to
-communicate with dbus2vdr...
+the address. For vdr-dbus-send.sh set the environment variable VDR_ID to the instance id - e.g.:
+VDR_ID=1 vdr-dbus-send.sh /Status status.IsReplaying
 
 Commandline Arguments
 ---------------------
